--- a/css/nomq_news.css
+++ b/css/nomq_news.css
@@ -1,1 +1,1 @@
-#muse_css_mq{background-color:#FFFFFF;}#bp_infinity.active{display:block;}#page{min-height:224px;padding-top:62px;padding-bottom:514px;max-width:1101px;}#u1110-4{width:76.39%;margin-left:11.81%;}#u2357{margin-top:2px;}#u1922-4{margin-top:70px;width:15.9%;margin-left:12.54%;}
+#muse_css_mq{background-color:#FFFFFF;}#bp_infinity.active{display:block;}#page{min-height:687px;padding-top:29px;padding-bottom:84px;max-width:1101px;}#u1110-4{width:76.39%;margin-left:11.81%;}#u2357{margin-left:20px;top:-5px;margin-bottom:-5px;}#u3256{margin-top:44px;width:25.44%;margin-left:71.76%;}
