--- a/css/nomq_our-year.css
+++ b/css/nomq_our-year.css
@@ -1,1 +1,1 @@
-#muse_css_mq{background-color:#FFFFFF;}#bp_infinity.active{display:block;}#page{min-height:218px;padding-top:62px;padding-bottom:520px;max-width:1101px;}#u1110-4{width:76.39%;margin-left:11.81%;}#u2357{margin-top:2px;}#u1926-4{margin-top:64px;width:15.54%;margin-left:13.81%;}
+#muse_css_mq{background-color:#FFFFFF;}#bp_infinity.active{display:block;}#page{min-height:218px;padding-top:29px;padding-bottom:553px;max-width:1101px;}#u1110-4{width:76.39%;margin-left:11.81%;}#u2357{top:-5px;margin-bottom:-5px;}#u1926-4{margin-top:71px;width:15.54%;margin-left:13.81%;}
