--- a/css/iefonts_memories.css
+++ b/css/iefonts_memories.css
@@ -1,1 +1,1 @@
-#u173-4{font-family:overlock-n9, sans-serif;}#u6708-7{font-family:overlock-n4, sans-serif;}#u6707-4,#u6663-6,#u6723-6,#u6726-6{font-family:overlock-n9, sans-serif;}
+/* empty css file */
